style.css
/* Create class floating for shadow-box styling */

html {
  scroll-behavior: smooth;
}

body {
  font-family: 'Roboto', sans-serif;
}
.content {
  /* padding: 40px; */
  padding-left: 40px;
  font-size: 1.68rem;
  width: 95%;
}

.intro-image {
  /* display: none; */
  max-height: auto;
  max-width: 100%;
}

blockquote {
  margin-left: 20px 0;
  padding-left: 1.5rem;
  margin-bottom: 2rem;
  font-weight: 400;
  border-left: 5px solid black;
  font-size: 125%;
}

p {
  font-size: 1.68rem;
  font-weight: 300;
  line-height: 2.88rem;
}

nav.side-nav.fixed {
  height: 100%;
  width: 160px;
  top: 0;
  left: 0;
  position: fixed;
  overflow-x: hidden;
  /* padding-top: 20px; */
  box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.16), 0 2px 10px 0 rgba(0, 0, 0, 0.12);
}

nav.hide-on-large.top {
  display: none;
}

.hide-on-large-slide {
  background-color: white;
  height: 100%;
  width: 164px;
  top: 0;
  left: -164px;
  position: fixed;
  overflow-x: hidden;
  padding-top: 20px;
  z-index: 10;
  transition: 500ms;
  box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.16), 0 2px 10px 0 rgba(0, 0, 0, 0.12); /* display: none; */
}

.active {
  left: 0;
}

.mask {
  background-color: rgba(3, 3, 3, 0.5);
  opacity: 1;
  height: 100%;
  width: 100%;
  top: 0;
  left: 0;
  position: fixed;
  z-index: 9;
  display: none;
  /* transition: opacity 1000ms; */
}

.open-nav-icon {
  color: black;
}

.navbar-title {
  color: black;
  text-transform: uppercase;
}

ul {
  list-style-type: none;
  margin-left: 0;
  padding-left: 0px;
}

hr {
  padding: 0;
  margin: 0;
}

li a {
  padding: 20px;
}

li a,
a:hover {
  color: black;
  display: list-item;
  box-sizing: content-box;
  text-decoration: none;
}

li:hover {
  background-color: rgba(0, 0, 0, 0.1);
  padding-left: 2px;
  transition: 100ms;
}

li.logo,
li.logo:hover {
  /* height: 120px; */
  /* padding-left: 20px; */
  font-weight: bolder;
  background-color: #ffffff;
}

main {
  margin-left: 160px;
  /* padding: 0px 10px; */
  z-index: 1;
  /* https://www.heropatterns.com/ */
  background-color: #ffffff;
  background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='4' height='4' viewBox='0 0 4 4'%3E%3Cpath fill='%23d8d8d8' fill-opacity='0.4' d='M1 3h1v1H1V3zm2-2h1v1H3V1z'%3E%3C/path%3E%3C/svg%3E");
}

h3 {
  font-weight: 200;
  margin-bottom: 30px;
  margin-top: 0;
  padding: 30px 40px;
  text-transform: uppercase;
}

div.offset-space {
  height: 0;
}

.teal {
  background-color: #008073;
}

.white-text {
  color: #ffffff !important;
}

/* responsive styles */

@media screen and (max-width: 900px) {
  nav.side-nav.fixed {
    position: relative;
    display: none;
  }

  nav.hide-on-large.top {
    display: block;
    position: fixed;
    background-color: white;
    height: 64px;
    width: 100%;
    top: 0;
    z-index: 2;
    box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.16),
      0 2px 10px 0 rgba(0, 0, 0, 0.12);
    padding-top: 20px;
  }

  a.button-toggle-nav {
    float: left;
    margin-left: 20px;
  }
  a.button-toggle-nav:hover {
    color: #008073;
    cursor: pointer;
  }

  a.title {
    color: black;
    text-decoration: none;
  }

  .navbar-title {
    text-align: center;
    width: 100%;
    position: absolute;
    z-index: -1;
  }

  main {
    margin-left: 0px;
    /* margin-top: 64px; */
  }

  div.offset-space {
    height: 64px;
  }
  .content {
    padding: 40px;
    font-size: 1.3rem;
    /* height: 100vh; */
  }
}

